
[TestOnlyThrowErrorRule/invalid-0 - 1]
Diagnostic 1: undef (1:1 - 1:16)
Message: Do not throw undefined.
   1 | throw undefined;
     | ~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-1 - 1]
Diagnostic 1: object (1:7 - 1:20)
Message: Expected an error object to be thrown.
   1 | throw new String('');
     |       ~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-2 - 1]
Diagnostic 1: object (1:7 - 1:13)
Message: Expected an error object to be thrown.
   1 | throw 'error';
     |       ~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-3 - 1]
Diagnostic 1: object (1:7 - 1:7)
Message: Expected an error object to be thrown.
   1 | throw 0;
     |       ~
---

[TestOnlyThrowErrorRule/invalid-4 - 1]
Diagnostic 1: object (1:7 - 1:11)
Message: Expected an error object to be thrown.
   1 | throw false;
     |       ~~~~~
---

[TestOnlyThrowErrorRule/invalid-5 - 1]
Diagnostic 1: object (1:7 - 1:10)
Message: Expected an error object to be thrown.
   1 | throw null;
     |       ~~~~
---

[TestOnlyThrowErrorRule/invalid-6 - 1]
Diagnostic 1: object (1:7 - 1:8)
Message: Expected an error object to be thrown.
   1 | throw {};
     |       ~~
---

[TestOnlyThrowErrorRule/invalid-7 - 1]
Diagnostic 1: object (1:7 - 1:15)
Message: Expected an error object to be thrown.
   1 | throw 'a' + 'b';
     |       ~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-8 - 1]
Diagnostic 1: object (3:7 - 3:13)
Message: Expected an error object to be thrown.
   2 | const a = '';
   3 | throw a + 'b';
     |       ~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-9 - 1]
Diagnostic 1: object (1:7 - 1:21)
Message: Expected an error object to be thrown.
   1 | throw (foo = 'error');
     |       ~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-10 - 1]
Diagnostic 1: object (1:7 - 1:28)
Message: Expected an error object to be thrown.
   1 | throw (new Error(), 1, 2, 3);
     |       ~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-11 - 1]
Diagnostic 1: object (1:7 - 1:33)
Message: Expected an error object to be thrown.
   1 | throw 'literal' && 'not an Error';
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-12 - 1]
Diagnostic 1: object (1:7 - 1:30)
Message: Expected an error object to be thrown.
   1 | throw 'literal' || new Error();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-13 - 1]
Diagnostic 1: object (1:7 - 1:30)
Message: Expected an error object to be thrown.
   1 | throw new Error() && 'literal';
     |       ~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-14 - 1]
Diagnostic 1: object (1:7 - 1:30)
Message: Expected an error object to be thrown.
   1 | throw 'literal' ?? new Error();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-15 - 1]
Diagnostic 1: object (1:7 - 1:38)
Message: Expected an error object to be thrown.
   1 | throw foo ? 'not an Error' : 'literal';
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-16 - 1]
Diagnostic 1: object (1:7 - 1:35)
Message: Expected an error object to be thrown.
   1 | throw foo ? new Error() : 'literal';
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-17 - 1]
Diagnostic 1: object (1:7 - 1:35)
Message: Expected an error object to be thrown.
   1 | throw foo ? 'literal' : new Error();
     |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-18 - 1]
Diagnostic 1: object (1:7 - 1:14)
Message: Expected an error object to be thrown.
   1 | throw `${err}`;
     |       ~~~~~~~~
---

[TestOnlyThrowErrorRule/invalid-19 - 1]
Diagnostic 1: object (3:7 - 3:9)
Message: Expected an error object to be thrown.
   2 | const err = 'error';
   3 | throw err;
     |       ~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-20 - 1]
Diagnostic 1: object (3:7 - 3:18)
Message: Expected an error object to be thrown.
   2 | function foo(msg) {}
   3 | throw foo('error');
     |       ~~~~~~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-21 - 1]
Diagnostic 1: object (5:7 - 5:13)
Message: Expected an error object to be thrown.
   4 | };
   5 | throw foo.msg;
     |       ~~~~~~~
   6 |       
---

[TestOnlyThrowErrorRule/invalid-22 - 1]
Diagnostic 1: undef (5:1 - 5:14)
Message: Do not throw undefined.
   4 | };
   5 | throw foo.msg;
     | ~~~~~~~~~~~~~~
   6 |       
---

[TestOnlyThrowErrorRule/invalid-23 - 1]
Diagnostic 1: object (3:7 - 3:23)
Message: Expected an error object to be thrown.
   2 | class CustomError {}
   3 | throw new CustomError();
     |       ~~~~~~~~~~~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-24 - 1]
Diagnostic 1: object (4:7 - 4:23)
Message: Expected an error object to be thrown.
   3 | class CustomError extends Foo {}
   4 | throw new CustomError();
     |       ~~~~~~~~~~~~~~~~~
   5 |       
---

[TestOnlyThrowErrorRule/invalid-25 - 1]
Diagnostic 1: object (3:7 - 3:11)
Message: Expected an error object to be thrown.
   2 | const Error = null;
   3 | throw Error;
     |       ~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-26 - 1]
Diagnostic 1: object (3:7 - 3:17)
Message: Expected an error object to be thrown.
   2 | import { Error } from './class';
   3 | throw new Error();
     |       ~~~~~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-27 - 1]
Diagnostic 1: object (3:7 - 3:23)
Message: Expected an error object to be thrown.
   2 | class CustomError<T extends object> extends Foo {}
   3 | throw new CustomError();
     |       ~~~~~~~~~~~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-28 - 1]
Diagnostic 1: object (4:9 - 4:11)
Message: Expected an error object to be thrown.
   3 |   const res: T;
   4 |   throw res;
     |         ~~~
   5 | }
---

[TestOnlyThrowErrorRule/invalid-29 - 1]
Diagnostic 1: object (5:9 - 5:11)
Message: Expected an error object to be thrown.
   4 |   const res = promise.then(() => {}).catch(() => {});
   5 |   throw res;
     |         ~~~
   6 | }
---

[TestOnlyThrowErrorRule/invalid-30 - 1]
Diagnostic 1: object (3:9 - 3:53)
Message: Expected an error object to be thrown.
   2 | function foo() {
   3 |   throw Object.assign({ foo: 'foo' }, { bar: 'bar' });
     |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-31 - 1]
Diagnostic 1: object (4:9 - 4:11)
Message: Expected an error object to be thrown.
   3 | function bar() {
   4 |   throw foo;
     |         ~~~
   5 | }
---

[TestOnlyThrowErrorRule/invalid-32 - 1]
Diagnostic 1: object (3:7 - 3:19)
Message: Expected an error object to be thrown.
   2 | declare const foo: Error | string;
   3 | throw foo as string;
     |       ~~~~~~~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-33 - 1]
Diagnostic 1: object (3:9 - 3:13)
Message: Expected an error object to be thrown.
   2 | function fun(value: any) {
   3 |   throw value;
     |         ~~~~~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-34 - 1]
Diagnostic 1: object (3:9 - 3:13)
Message: Expected an error object to be thrown.
   2 | function fun(value: unknown) {
   3 |   throw value;
     |         ~~~~~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-35 - 1]
Diagnostic 1: object (3:9 - 3:9)
Message: Expected an error object to be thrown.
   2 | function fun<T extends number>(t: T): void {
   3 |   throw t;
     |         ~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-36 - 1]
Diagnostic 1: object (3:7 - 3:24)
Message: Expected an error object to be thrown.
   2 | class UnknownError implements Error {}
   3 | throw new UnknownError();
     |       ~~~~~~~~~~~~~~~~~~
   4 |       
---

[TestOnlyThrowErrorRule/invalid-37 - 1]
Diagnostic 1: object (3:9 - 3:17)
Message: Expected an error object to be thrown.
   2 | async function foo() {
   3 |   throw await bar;
     |         ~~~~~~~~~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-38 - 1]
Diagnostic 1: object (3:9 - 3:42)
Message: Expected an error object to be thrown.
   2 | async function foo() {
   3 |   throw await Promise.resolve<number>(303);
     |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-39 - 1]
Diagnostic 1: object (3:9 - 3:17)
Message: Expected an error object to be thrown.
   2 | function *foo(): Generator<number, void, string> {
   3 |   throw yield 303;
     |         ~~~~~~~~~
   4 | }
---

[TestOnlyThrowErrorRule/invalid-40 - 1]
Diagnostic 1: object (4:9 - 4:9)
Message: Expected an error object to be thrown.
   3 | Promise.reject('foo').catch(e => {
   4 |   throw x;
     |         ~
   5 | });
---

[TestOnlyThrowErrorRule/invalid-41 - 1]
Diagnostic 1: object (3:9 - 3:9)
Message: Expected an error object to be thrown.
   2 | Promise.reject('foo').catch((...e) => {
   3 |   throw e;
     |         ~
   4 | });
---

[TestOnlyThrowErrorRule/invalid-42 - 1]
Diagnostic 1: object (4:9 - 4:9)
Message: Expected an error object to be thrown.
   3 | Promise.reject('foo').catch(...x, e => {
   4 |   throw e;
     |         ~
   5 | });
---

[TestOnlyThrowErrorRule/invalid-43 - 1]
Diagnostic 1: object (4:9 - 4:9)
Message: Expected an error object to be thrown.
   3 | Promise.reject('foo').then(...x, e => {
   4 |   throw e;
     |         ~
   5 | });
---

[TestOnlyThrowErrorRule/invalid-44 - 1]
Diagnostic 1: object (5:9 - 5:9)
Message: Expected an error object to be thrown.
   4 | Promise.reject('foo').then(onFulfilled, ...x, e => {
   5 |   throw e;
     |         ~
   6 | });
---

[TestOnlyThrowErrorRule/invalid-45 - 1]
Diagnostic 1: object (3:9 - 3:9)
Message: Expected an error object to be thrown.
   2 | Promise.reject('foo').then((...e) => {
   3 |   throw e;
     |         ~
   4 | });
---

[TestOnlyThrowErrorRule/invalid-46 - 1]
Diagnostic 1: object (3:9 - 3:18)
Message: Expected an error object to be thrown.
   2 | Promise.reject('foo').then(e => {
   3 |   throw globalThis;
     |         ~~~~~~~~~~
   4 | });
---

[TestOnlyThrowErrorRule/invalid-47 - 1]
Diagnostic 1: object (3:7 - 3:19)
Message: Expected an error object to be thrown.
   2 | import { createError } from 'errors-like';
   3 | throw createError();
     |       ~~~~~~~~~~~~~
   4 |       
---
